<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Team Up</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mo\'men Shaheen</string>
    <string name="nav_header_subtitle"> Projects </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string-array name="durations">
        <item>Day</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>
    <string-array name="durations_time">
        <item>ساعة</item>
        <item>يومى</item>
        <item>شهرى</item>
        <item>سنوى</item>
        <item>موسمى</item>
        <item>دورى</item>
    </string-array>
    <string-array name="pro_type">
        <item>Always</item>
        <item>For aWhile</item>
        <item>Temp</item>
    </string-array>
    <string name="saw_intro_preference_key">saw_introduction</string>
    <string name="shared_preferences_name">preference</string>
    <string name="title_activity_go_map">Map</string>
    <string name="log_in">"Sign In"</string>
    <string name="facebook_app_id">424047931700835</string>
    <string name="fb_login_protocol_scheme">fb424047931700835</string>
    <string name="already_have_an_account">Already have account?</string>
    <string name="join_us_now">join Us Now</string>
    <string name="join_us_now_1">Register an account now and start with secure</string>
    <string name="join_us_now_2"> and secured investment through our platform</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="edit_personal_data">Edit Personal Data</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="birth_date">Birth date</string>
    <string name="job_title">Job Title</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="email_address">Email</string>
    <string name="save">Save</string>
    <string name="pressHere">Click here to edit the project name</string>
    <string name="projectDesc">What about the project...</string>
    <string name="whatYouHaveDesc">Mention in detail what you now own to participate in the project...</string>
    <string name="whatYouHaveNotDesc">Mention in detail what you need with your project applicants...</string>
    <string name="money">Discretionary Financial study</string>
    <string name="proDetails">Project Details</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="anotherKind"> Other</string>
    <string name="moneyExpected"> Total Profit return</string>
    <string name="whatYouHave">What you already have</string>
    <string name="whatYouHaveNot">Requirement</string>
    <string name="contributors">Nature of required Subscribers</string>
    <string name="both">Both</string>
    <string name="numContributors">Number of contributors</string>
    <string name="proBlabla">  Because your project succeeds you must explain all the requirements and supplies to build a successful project </string>
    <string name="place"> Nature of desired/available location </string>
    <string name="neddplace"> Does the project need a place? </string>
    <string name="yes"> Yes </string>
    <string name="no"> No </string>
    <string name="proAttachment"> Attachments </string>
    <string name="proBla"> Success of the project on the last step of the steps of success lift up your project extensions or your initially designs </string>
    <string name="attachment"> Attachments </string>
    <string name="proCapital"> Project Marketing Sites </string>
    <string name="egypt"> Egypt </string>
    <string name="dep"> Section </string>
    <string name="tags"> Tags </string>
    <string name="go"> Launch </string>
    <string name="depName">Section Name </string>
    <string name="advancedSearch"> Advanced Project Search </string>
    <string name="searchBla"> Categorize and view projects now to your needs with ease and convenience through advanced tools </string>
    <string name="proName"> Project name </string>
    <string name="proCost"> Project cost </string>
    <string name="proNumCont"> Number of Project contributors </string>
    <string name="search"> Search </string>
    <string name="dateOfBirth"> Date of birth </string>
    <string name="phone"> Phone </string>
    <string name="from"> Almost </string>
    <string name="to"> To </string>
    <string name="min_val_error">"The value cannot be less than "</string>
    <string name="max_error_val">"لThe value cannot be more than "</string>
    <string name="minExperienceNeededKey">minExperienceNeededKey</string>
    <string name="maxExperienceNeededKey">maxExperienceNeededKey</string>
    <string name="minMoneyOutKey">minMoneyOutKey</string>
    <string name="maxMoneyOutKey">maxMoneyOutKey</string>
    <string name="minMoneyInKey">minMoneyInKey</string>
    <string name="maxMoneyInKey">maxMoneyInKey</string>
    <string name="minContributorKey">minContributorKey</string>
    <string name="maxContributorKey">maxContributorKey</string>
    <string name="name_required">Project name required</string>
    <string name="details_required">Project Details required</string>
    <string name="dept_error">Required choosing a section</string>
    <string name="cap_required">Select at least one State </string>
    <string name="reportText">Enter the content of the complaint</string>
    <string name="hi">Hi!</string>
    <string name="happyHome">We\'re happy to have you back.</string>
    <string name="loginOrSignup">Sign in or create a new account</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="recoverPassword">Password recovery</string>
    <string name="resetPassword">Don\'t worry. Just write your email account to retrieve your password via email</string>
    <string name="recover">Recover</string>
    <string name="home">Home</string>
    <string name="goMap">Go Map</string>
    <string name="savedProjects">Registered projects</string>
    <string name="perposedOffers">Proposed offers</string>
    <string name="favourite">Favorite</string>
    <string name="profileSettings">Personal account Settings</string>
    <string name="logout">Log out</string>
    <string name="noDataYet">There is no data available now</string>
    <string name="details">Details</string>
    <string name="gotoEmail">Check your email</string>
    <string name="writeTheCode">And type your activation code</string>
    <string name="confirm">Confirm</string>
    <string name="write">Write</string>
    <string name="newPassword">New password</string>
    <string name="confirmPassword">confirm password</string>
    <string name="bio">Bio</string>
    <string name="seeMore">Show more</string>
    <string name="reportProject">Report project</string>
    <string name="wrongEmailPattern">Wrong Email Pattern</string>
    <string name="canotFindEmail">Your email is not currently found</string>
    <string name="wrongCode">Wrong activation code please check email</string>
    <string name="noRequestsFound">No project proposals currently available</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_account_settings">Edit profile</string>
    <string name="alert">Report</string>
    <string name="report">Report</string>
    <string name="delete_offer">Delete</string>
    <string name="edit_offer">Edit</string>
    <string name="login_failed_try_again">Login failed, try again.</string>
    <string name="registerInProgress">Register ...</string>
    <string name="noti_body">Check out the projects on TeamUp</string>
    <string name="and"> And </string>
    <string name="per"> \ </string>
    <string name="always">Continuous</string>
    <string name="perioud">Seasonal</string>
    <string name="jsutOnce">Other</string>
    <string name="hour">Hour</string>
    <string name="daily">Daily</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="onceTime">OnceTime</string>
    <string name="others"> Others </string>
    <string name="congrateForAcceptingUrRequirement"> Mubarak, your proposals for participation in projects have been accepted </string>
    <string name="likesUrProjects"> Like your projects </string>
    <string name="congrateForConfirmingUrProjects"> Mubarak, projects have been accepted </string>
    <string name="nowUCanTraceUrProject"> Now you can follow the progress of your project </string>
    <string name="notificationSettings">Allow Notifications?</string>
    <string name="directCost">Periodic costs</string>
    <string name="IndirectCost">Supplementary costs</string>
    <string name="typeDirectCost">Nature of direct expenses</string>
    <string name="typeInDirectCost">Nature of indirect expenses</string>
    <string name="proDuration">Duration of project implementation</string>
    <string name="availableProjects"> Available</string>
    <string name="hintProjects"> Hints</string>
    <string name="successProjects"> Successful</string>
    <string name="noSpecailChars">Special characters are not allowed</string>
    <string name="moneyType">Profit Type</string>
    <string name="moneyAmount"> Amount of Initial money required to build the project </string>
    <string name="totalCostExcpected">Total projected costs</string>
    <string name="categories">Categories</string>
    <string name="projectTotalCost">Project total cost</string>
    <string name="filterBlaBla">Categorize and view projects now to your needs with ease and convenience through advanced tools</string>
    <string name="partners">Partners</string>
    <string name="headMoney">• Capital</string>
    <string name="a">• Periodic costs</string>
    <string name="b">• Supplementary costs</string>
    <string name="c">• Duration of execution</string>
    <string name="d">• Average profit</string>
    <string name="e">• Total projected costs</string>
    <string name="processing">Processing...</string>
    <string name="see_joined_people">See Joined People</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="block">Block</string>
    <string name="join">Join</string>
    <string name="share">Share</string>
    <string name="like">Like</string>
    <string name="reason_to_refuse">Reason to refuse</string>
    <string name="continueString">Continue</string>
    <string name="please_select_reason">Please select one of the available reasons</string>
    <string name="select">Select...</string>
    <string name="your_reason">Your Reason...</string>
    <string name="please_enter_a_reason">Please Enter A Reason</string>
    <string name="other_reason">Other reason</string>
    <string name="no_one_joined">No one has requested to join your project yet.</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="status">Status:</string>
    <string name="on_hold">On Hold</string>
    <string name="enter_valid_full_name">Enter Valid Full Name.</string>
    <string name="enter_valid_email">Enter Valid E-Mail Address.</string>
    <string name="password_must_have_8">Password must contain at least 8 characters.</string>
</resources>