<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_user_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_person" />
    
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        tools:text="Full Name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000"
        app:layout_constraintBottom_toBottomOf="@+id/iv_user_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_user_image"
        app:layout_constraintTop_toTopOf="@+id/iv_user_image" />

    <Button
        android:id="@+id/btn_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corner_button_blue"
        android:text="@string/accept"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toStartOf="@+id/btn_reject"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_user_image" />

    <Button
        android:id="@+id/btn_reject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_corner_button_red"
        android:text="@string/reject"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toStartOf="@+id/btn_block"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_accept"
        app:layout_constraintTop_toTopOf="@+id/btn_accept" />

    <Button
        android:id="@+id/btn_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_corner_button_gray"
        android:text="@string/block"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_reject"
        app:layout_constraintTop_toTopOf="@+id/btn_reject" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_reject"
        android:background="@drawable/rounded_corner_button_gray"/>
</android.support.constraint.ConstraintLayout>